# SubTrack

./: .gitignore
docs/station1/: doc.md
docs/station2/: doc.md
docs/station3/: doc.md
src/auth/: Cargo.toml  rust-toolchain.toml  rustfmt.toml
src/auth/modules/application/: Cargo.toml
src/auth/modules/application/src/: services.rs
src/auth/modules/domain/: Cargo.toml
src/auth/modules/domain/src/: auth_user.rs  lib.rs  repository.rs  token.rs  user.rs
src/auth/modules/domain/src/repository/: auth_user_repository.rs  user_repository.rs
src/auth/modules/domain/src/user/: email.rs  name.rs  password.rs  user_error.rs  user_id.rs  user_type.rs
src/auth/modules/infrastructure/: Cargo.toml
src/auth/modules/infrastructure/src/: lib.rs  mapper.rs
src/auth/modules/infrastructure/src/repository_impl/: user_repository_impl.rs
src/auth/server/: Cargo.toml
src/auth/server/src/: lib.rs  main.rs
