[package]
name = "infrastructure"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-sdk-dynamodb = { workspace = true }
aws-sdk-cognitoidentityprovider = { workspace = true }

hmac = { workspace = true }
sha2 = { workspace = true }
base64 = { workspace = true }

tracing = { workspace = true }
tracing-subscriber = { workspace = true }

domain = { path = "../domain" }
